--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <wrapper>
-            <header></header>
-            <section id="what-we-do"></section>
-            <section id="accordion"></section>
-            <section id="about-us"></section>
-            <section id="projects"></section>
+            <!-- <header></header> -->
+            <!-- <section id="what-we-do"></section> -->
+            <!-- <section id="accordion"></section> -->
+            <!-- <section id="about-us"></section> -->
+            <!-- <section id="projects"></section> -->
             <section id="tell-us"></section>
             <section id="contact"></section>
             <footer></footer>
