--- a/section/tell-us.html
+++ b/section/tell-us.html
@@ -1,14 +1,20 @@
-<div>
-    <input type="text" name="" id="" placeholder="Your Name">
-    <div>
-        <h5 class="tell-us">Your Contact / Email or Phone with Messengers </h5>
+<div class="bottom-section">
+    <div class="input">
+        <input type="text" name="" id="" placeholder="Your Name">
+    </div>
+    <div class="input">
+        <h5 class="tell-us">Your Contact / Email or Phone with Messengers</h5>
         <input type="tel" name="" id="" value="+35 088 528 63 59">
     </div>
     <form action="" class="budget">
         <h3 class="title">Your budget of project:</h3>
         <div class="budget-scroll">
-            <input type="range" name="" id="">
+            <input class="range" type="range" name="" id="">
+
         </div>
     </form>
+    <div class="input">
+        <input type="text" name="" id="" placeholder="Add text or Comment About project">
+    </div>
     <button>Send</button>
 </div>
