style -bg -ranged

--- a/index.html
+++ b/index.html
@@ -5,22 +5,93 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.cdnfonts.com/css/proxima-nova-2"
             rel="stylesheet">
-            <link href="https://fonts.cdnfonts.com/css/merriweather" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/merriweather"
+            rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/marcellus" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
         <title>Lunaria</title>
     </head>
     <body>
         <wrapper>
-            <!-- <header></header> -->
+            <header>
+                <div class="top-header">Stand <span>with Ukraine</span></div>
+<div class="hero">
+    <div>
+        <div class="logo"><img src="../img/lunaria.png" alt="logo"></div>
+        <div><img src="../img/web-ui-dev.png" alt="web-ui-dev"></div>
+    </div>
+    <div class="container container__hero">
+        <h2>Lunaria is the leading IT
+            integrator for taking your
+            business to the next level</h2>
+        <p class="desc">Drive profit with omnichannel IT transformation</p>
+        <div class="botom-hero">
+            <h2 class="menu">What we DO:</h2>
+            <nav>
+                <ul>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="#contact-us">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
+
+            </header>
             <!-- <section id="what-we-do"></section> -->
-            <!-- <section id="accordion"></section> -->
+            <section id="accordion">
+                <ul class="accordion">
+                    <li>
+                        <button class="btn-accordion">
+                            <div class="closed">+</div>
+                            <h4>Quality</h4>
+                        </button>
+                        <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe,
+                            cupiditate!</h5>
+                    </li>
+                    <li>
+                        <button class="btn-accordion">
+                            <div class="closed">+</div>
+                            <h4>Guaranty</h4>
+                        </button>
+                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem
+                            accusantium vitae molestiae deleniti consectetur obcaecati porro
+                            delectus recusandae architecto ipsa.</h5>
+                    </li>
+                    <li>
+                        <button class="btn-accordion">
+                            <div class="closed">+</div>
+                            <h4>transparency of cooperation</h4>
+                        </button>
+                        <h5>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Consectetur, ab maiores! Ullam eligendi at exercitationem.</h5>
+                    </li>
+                    <li>
+                        <button class="btn-accordion">
+                            <div class="closed">+</div>
+                            <h4>confidentiality</h4>
+                        </button>
+                        <h5>Lorem ipsum dolor sit amet.</h5>
+                    </li>
+                </ul>
+            </section>
             <!-- <section id="about-us"></section> -->
             <!-- <section id="projects"></section> -->
-            <section id="tell-us"></section>
-            <section id="contact"></section>
-            <footer></footer>
+            <!-- <section id="tell-us"></section> -->
+            <!-- <section id="contact"></section> -->
+            <footer>
+                <div class="copy">
+                    <h1 class="logo">LUNARIA</h1>
+                    <div class="copyright">© 2010–2022 All rights are register</div>
+                </div>
+                <nav class="links">
+                    <ul>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">policy</a></li>
+                    </ul>
+                </nav>
+            </footer>
         </wrapper>
-    <script type="module" src="main.js"></script>
+        <script type="module" src="main.js"></script>
     </body>
 </html>
