--- a/section/contact.html
+++ b/section/contact.html
@@ -1,12 +1,12 @@
 <div class="contacts">
     <div class="main">
-        <h4 class="mail">Lunaria@gmail.com</h4>
-        <h4 class="tel">+32 087 3467 911</h4>
+        <h5 class="mail">Lunaria@gmail.com</h4>
+        <h5 class="tel">+32 087 3467 911</h4>
     </div>
     <div class="other">
-        <div class="adress">
+        <div class="address">
             <div class="img"></div>
-            <div class="adress-text">2650 Thousand Oaks Blvd, Memphis, TN 38118</div>
+            <h4 class="address-text">2650 Thousand <br> Oaks Blvd, Memphis,<br> TN 38118</h4>
         </div>
         <div class="soc">
             <h4 class="text">Our social network:</h4>
