--- a/section/tell-us.html
+++ b/section/tell-us.html
@@ -1,20 +1,24 @@
 <div class="bottom-section">
     <div class="input">
-        <input type="text" name="" id="" placeholder="Your Name">
+        <input type="text" placeholder="Your Name">
     </div>
     <div class="input">
         <h5 class="tell-us">Your Contact / Email or Phone with Messengers</h5>
-        <input type="tel" name="" id="" value="+35 088 528 63 59">
+        <input type="tel" value="+35 088 528 63 59">
     </div>
-    <form action="" class="budget">
+    <form class="budget" oninput="level.value= flevel.valueAsNumber">
         <h3 class="title">Your budget of project:</h3>
         <div class="budget-scroll">
-            <input class="range" type="range" name="" id="">
-
+            <input class="range" type="range" name="flevel" id="budget-slider"
+                value="10000" min="500" max="25000" step="50">
+            <div class="price">
+                <span>$</span>
+                <output for="budget-slider" name="level">More than $25000</output>
+            </div>
         </div>
     </form>
     <div class="input">
-        <input type="text" name="" id="" placeholder="Add text or Comment About project">
+        <input type="text" placeholder="Add text or Comment About project">
     </div>
-    <button>Send</button>
+    <button class="btn-send">Send</button>
 </div>
