--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
 
             </header>
 
-
-
             <section id="what-we-do">
                 <ul class="table">
                 </ul>
@@ -56,7 +54,7 @@
                             <div class="closed">+</div>
                             <h4>Quality</h4>
                         </button>
-                        <h5 class="hide">Lorem ipsum dolor, sit amet consectetur
+                        <h5 class="hide-block">Lorem ipsum dolor, sit amet consectetur
                             adipisicing
                             elit. Saepe,
                             cupiditate!</h5>
@@ -66,7 +64,7 @@
                             <div class="closed">+</div>
                             <h4>Guaranty</h4>
                         </button>
-                        <h5 class="hide">Lorem ipsum, dolor sit amet consectetur
+                        <h5 class="hide-block">Lorem ipsum, dolor sit amet consectetur
                             adipisicing
                             elit. Quidem
                             accusantium vitae molestiae deleniti consectetur
@@ -78,7 +76,7 @@
                             <div class="closed">+</div>
                             <h4>transparency of cooperation</h4>
                         </button>
-                        <h5 class="hide">Lorem ipsum dolor sit amet consectetur,
+                        <h5 class="hide-block">Lorem ipsum dolor sit amet consectetur,
                             adipisicing
                             elit.
                             Consectetur, ab maiores! Ullam eligendi at
@@ -89,7 +87,7 @@
                             <div class="closed">+</div>
                             <h4>confidentiality</h4>
                         </button>
-                        <h5 class="hide">Lorem ipsum dolor sit amet.</h5>
+                        <h5 class="hide-block">Lorem ipsum dolor sit amet.</h5>
                     </li>
                 </ul>
             </section>
@@ -119,8 +117,7 @@
                     <div class="input">
                         <h5 class="tell-us">Your Contact / Email or Phone with
                             Messengers</h5>
-                        <input type="tel" value="+35 088 528 63 59"
-                            maxlength="20">
+                        <input type="tel" class="tel" maxlength="20">
                     </div>
                     <form class="budget" oninput="level.value=
                         flevel.valueAsNumber">
