--- a/index.html
+++ b/index.html
@@ -123,13 +123,12 @@
                         flevel.valueAsNumber">
                         <h3 class="title">Your budget of project:</h3>
                         <div class="budget-scroll">
-                            <input class="range" type="range" name="flevel"
+                            <input class="range-slider styled-slider slider-progress" type="range" name="flevel"
                                 id="budget-slider"
-                                value="10000" min="500" max="25000" step="50">
+                                value="12500" min="500" max="25000" step="50">
                             <div class="price">
                                 <span>$</span>
-                                <output for="budget-slider" name="level">More
-                                    than $25000</output>
+                                <output for="budget-slider" name="level">12500</output>
                             </div>
                         </div>
                     </form>
