--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="budget-scroll">
                             <input class="range-slider styled-slider slider-progress" type="range" name="flevel"
                                 id="budget-slider"
-                                value="12500" min="500" max="25000" step="50">
+                                value="12500" min="500" max="25050" step="50">
                             <div class="price">
                                 <span>$</span>
                                 <output for="budget-slider" name="level">12500</output>
@@ -133,10 +133,9 @@
                         </div>
                     </form>
                     <div class="input">
-                        <input type="text" placeholder="Add text or Comment
-                            About project">
+                        <input type="text" placeholder="Add text or Comment About project">
                     </div>
-                    <button class="btn-send">Send</button>
+                    <div class="btn-send"><button>Send</button></div>
                 </div>
             </section>
 
