--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
                 <div class="top-header">Stand <span>with Ukraine</span></div>
                 <div class="hero">
-                    <div>
+                    <div class="dir-logo">
                         <div class="logo"><img src="../img/lunaria.png"
                                 alt="logo"></div>
                         <div><img src="../img/web-ui-dev.png" alt="web-ui-dev"></div>
@@ -54,7 +54,8 @@
                             <div class="closed">+</div>
                             <h4>Quality</h4>
                         </button>
-                        <h5 class="hide-block">Lorem ipsum dolor, sit amet consectetur
+                        <h5 class="hide-block">Lorem ipsum dolor, sit amet
+                            consectetur
                             adipisicing
                             elit. Saepe,
                             cupiditate!</h5>
@@ -64,7 +65,8 @@
                             <div class="closed">+</div>
                             <h4>Guaranty</h4>
                         </button>
-                        <h5 class="hide-block">Lorem ipsum, dolor sit amet consectetur
+                        <h5 class="hide-block">Lorem ipsum, dolor sit amet
+                            consectetur
                             adipisicing
                             elit. Quidem
                             accusantium vitae molestiae deleniti consectetur
@@ -76,7 +78,8 @@
                             <div class="closed">+</div>
                             <h4>transparency of cooperation</h4>
                         </button>
-                        <h5 class="hide-block">Lorem ipsum dolor sit amet consectetur,
+                        <h5 class="hide-block">Lorem ipsum dolor sit amet
+                            consectetur,
                             adipisicing
                             elit.
                             Consectetur, ab maiores! Ullam eligendi at
@@ -123,7 +126,8 @@
                         flevel.valueAsNumber">
                         <h3 class="title">Your budget of project:</h3>
                         <div class="budget-scroll">
-                            <input class="range-slider styled-slider slider-progress" type="range" name="flevel"
+                            <input class="range-slider styled-slider
+                                slider-progress" type="range" name="flevel"
                                 id="budget-slider"
                                 value="12500" min="500" max="25050" step="50">
                             <div class="price">
@@ -133,7 +137,8 @@
                         </div>
                     </form>
                     <div class="input">
-                        <input type="text" placeholder="Add text or Comment About project">
+                        <input type="text" placeholder="Add text or Comment
+                            About project">
                     </div>
                     <div class="btn-send"><button>Send</button></div>
                 </div>
