--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class="top-header">Stand <span>with Ukraine</span></div>
                 <div class="hero">
                     <div class="dir-logo">
-                        <div class="logo"><img src="../img/lunaria.png"
+                        <div class="logo"><img src="./img/lunaria.png"
                                 alt="logo"></div>
-                        <div><img src="../img/web-ui-dev.png" alt="web-ui-dev"></div>
+                        <div><img src="./img/web-ui-dev.png" alt="web-ui-dev"></div>
                     </div>
                     <div class="container container__hero">
                         <h2>Lunaria is the leading IT
