--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                         <input type="text" placeholder="Your Name">
                     </div>
                     <div class="input">
-                        <h5 class="tell-us">Your Contact / Email or Phone with
-                            Messengers</h5>
+                        <h5 class="tell-us">Your Contact / Email or Phone with Messengers</h5>
                         <input type="tel" class="tel" maxlength="20">
                     </div>
                     <form class="budget" oninput="level.value=
@@ -137,8 +136,7 @@
                         </div>
                     </form>
                     <div class="input">
-                        <input type="text" placeholder="Add text or Comment
-                            About project">
+                        <input type="text" placeholder="Add text or Comment About project">
                     </div>
                     <div class="btn-send"><button>Send</button></div>
                 </div>
